# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
authors = ["OpenTalk Team <mail@opentalk.eu>"]
description = "Compositor for the OpenTalk Recorder and Obelisk"
documentation = "https://docs.rs/opentalk-compositor"
edition = "2021"
homepage = "https://opentalk.eu/"
license = "EUPL-1.2"
name = "opentalk-compositor"
publish = true
repository = "https://gitlab.opencode.de/opentalk/libs/compositor"
version = "0.8.0"

[dependencies]
ab_glyph = "0.2"
anyhow = "1.0"
audio-nodes = { package = "ezk-audio-nodes", version = "0.1" }
chrono = "0.4"
ezk = "0.1"
ezk-audio = "0.1"
ezk-image = "0.1"
futures = "0.3"
glib = "0.20"
gst-app = { package = "gstreamer-app", version = "0.23", features = ["v1_22"] }
gst-base = { package = "gstreamer-base", version = "0.23", features = ["v1_22"] }
gst = { package = "gstreamer", version = "0.23", features = ["v1_22"] }
image = { version = "0.25.2", default-features = false, features = ["png"] }
livekit-api = "0.4"
livekit = { version = "0.6", features = ["rustls-tls-native-roots"] }
log = "0.4"
once_cell = "1.19"
parking_lot = "0.12.3"
pretty_env_logger = "0.5"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
env_logger = "0.11"
