# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "opentalk-compositor"
version = "0.13.0"
authors = ["OpenTalk Team <mail@opentalk.eu>"]
edition = "2021"
description = "Compositor for the OpenTalk Recorder and Obelisk"
documentation = "https://docs.rs/opentalk-compositor"
homepage = "https://opentalk.eu/"
repository = "https://gitlab.opencode.de/opentalk/libs/compositor"
license = "EUPL-1.2"
publish = true

[features]
default = ["gstreamer"]
gstreamer = ["glib", "gst-app", "gst-base", "gst"]

[dependencies]
ab_glyph = "0.2"
anyhow = "1.0"
audio-nodes = { package = "ezk-audio-nodes", version = "0.1" }
chrono = "0.4"
ezk = "0.1"
ezk-audio = "0.1"
ezk-image = "0.2"
futures = "0.3"
glib = { version = "0.20", optional = true }
gst = { package = "gstreamer", version = "0.23", features = ["v1_22"], optional = true }
gst-app = { package = "gstreamer-app", version = "0.23", features = ["v1_22"], optional = true }
gst-base = { package = "gstreamer-base", version = "0.23", features = ["v1_22"], optional = true }
image = { version = "0.25.2", default-features = false, features = ["png"] }
livekit = { version = "=0.7.5", features = ["rustls-tls-native-roots"] }                           # Livekit released another incompatible non-semver compliant patch version
livekit-api = "0.4"
log = "0.4"
once_cell = "1.19"
parking_lot = "0.12.3"
pretty_env_logger = "0.5"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["signal", "sync", "time", "macros", "rt-multi-thread"] }
uuid = { version = "1.10.0", features = ["v4"] }

[dev-dependencies]
env_logger = "0.11"
